--- a/00-vpc/Jenkinsfile
+++ b/00-vpc/Jenkinsfile
@@ -1,92 +1,63 @@
-pipeline {
-    agent  {
-        label 'AGENT-1'
+pipeline{
+    agent{
+        label 'agent-1'
     }
-    environment { 
-        appVersion = ''
-        REGION = "us-east-1"
-        ACC_ID = "315069654700"
-        PROJECT = "roboshop"
+    environment{
+        appVersion=''
+        project='robshop'
     }
-    options {
-        timeout(time: 30, unit: 'MINUTES') 
-        disableConcurrentBuilds()
-        ansiColor('xterm')
+    options{
+        ansicolor('xtrem')
     }
-    /* parameters {
-        string(name: 'PERSON', defaultValue: 'Mr Jenkins', description: 'Who should I say hello to?')
-        text(name: 'BIOGRAPHY', defaultValue: '', description: 'Enter some information about the person')
-        booleanParam(name: 'TOGGLE', defaultValue: true, description: 'Toggle this value')
-        choice(name: 'CHOICE', choices: ['One', 'Two', 'Three'], description: 'Pick something')
-        password(name: 'PASSWORD', defaultValue: 'SECRET', description: 'Enter a password') 
-    } */
-    // Build
-    stages {
-        stage('init') {
-            steps {
-                script {
-                    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
-                        sh """
-                            cd 00-vpc
-                            terraform init -reconfigure
-                        """
-                    }
+    stages{
+        stage(terraform init vpc){
+            steps{
+                withAWS(credentials: 'aws-auth', region: 'us-east-1'){
+                    sh """
+                        cd 00-vpc
+                        terraform init -reconfigure
+                    """
+                }
+            }
+        }
+    
+        stage(terraform plan vpc){
+            steps{
+                withAWS(credentials: 'aws-auth', region: 'us-east-1'){
+                    sh"""
+                        cd 00-vpc
+                        terraform plan
+                    """
                 }
             }
         }
 
-        stage('plan') {
-            steps {
-                script {
-                    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
-                        sh """
-                            cd 00-vpc
-                            terraform plan
-                        """
-                    }
-                }
-            }
-        }
-        stage('apply') {
+        stage(terraform apply){
             input {
                 message "Should we continue?"
                 ok "Yes, we should."
                 submitter "alice,bob"
             }
-            steps {
-                script {
-                    withAWS(credentials: 'aws-creds', region: 'us-east-1') {
-                        sh """
-                            cd 00-vpc
-                            terraform apply -auto-approve
-                        """
-                    }
+            steps{
+                withAWS(credentials: 'aws-auth', region: 'us-east-1'){
+                    sh """
+                        cd 00-vpc
+                        terraform plan -auto-approve
+                    """
                 }
             }
         }
-        // Down stream job
-        stage('Trigger SG') {
-            steps {
-                script {
-                    build job: '10-sg', 
-                      propagate: false,  // even SG fails VPC will not be effected
-                      wait: false // VPC will not wait for SG pipeline completion
-                }
-            }
-        }
-        
-    }
 
-    post { 
-        always { 
-            echo 'I will always say Hello again!'
-            deleteDir()
-        }
-        success { 
-            echo 'Hello Success'
-        }
-        failure { 
-            echo 'Hello Failure'
+        stage(triggering sg fom vpc){
+            steps{
+                build job: '10-sg'
+                parameters: [
+                        // string(name: '',value'')
+
+                ]
+                propagate: true
+                wait: true
+            }
         }
     }
 }
