--- a/00-vpc/Jenkinsfile
+++ b/00-vpc/Jenkinsfile
@@ -23,6 +23,20 @@ pipeline{
                 
             }
         }
+
+        stage('init'){
+            steps{
+                script{
+                    withAWS(credentials: 'aws-auth', region: 'us-east-1'){
+                    sh """
+                        cd 00-vpc
+                        terraform destroy -auto-approve
+                    """
+                    }
+                }
+                
+            }
+        }
     
         stage('plan'){
             steps{
