--- a/60-acm/Jenkinsfile
+++ b/60-acm/Jenkinsfile
@@ -15,7 +15,7 @@ pipeline{
                 script{
                     withAWS(credentials: 'aws-auth', region: 'us-east-1'){
                     sh """
-                        cd 00-vpc
+                        cd 60-acm
                         terraform init -reconfigure
                     """
                 }
@@ -29,7 +29,7 @@ pipeline{
                 script{
                     withAWS(credentials: 'aws-auth', region: 'us-east-1'){
                     sh"""
-                        cd 00-vpc
+                        cd 60-acm
                         terraform plan
                     """
                 }
@@ -48,7 +48,7 @@ pipeline{
                 script{
                     withAWS(credentials: 'aws-auth', region: 'us-east-1'){
                     sh """
-                        cd 00-vpc
+                        cd 60-acm
                         terraform plan -auto-approve
                     """
                 }
